# Audiobook_generator_-Infosys_Internship_Aug2025

./: .env  .env.example  .env.template  .gitignore  22_AIML_SCHEME_SYLLABUS_rewritten.md  Cloud Computing-Module 1_extracted.md  Docx_extractor.ipynb  EDGE.py  Image_extractor.ipynb  LLm.ipynb  Main.ipynb  Mistral.py  Mistral_Endpoint.py  PDF and DOCX Accuracy Evaluation.py  Pdf_extractor.ipynb  Pipeline.ipynb  RAG.py  README.md  Salammbo_raw.md  Salammbo_rewritten.md  TTS.ipynb  TTS_test.py  Task2_code.py  Task2_metrics.txt  Task3_code.py  Task3_image_output.md  Task3_source2.docx  Task3_source2_output.md  TextExtractor.py  Text_Extraction_Module.py  Util.ipynb  app.py  audio_generation.py  audiobook.py  audiobook_generator.py  audiobook_pipeline.py  audiobook_ready.md  audiobook_ready_20250911_224845.md  audiobook_requirements.txt  audiobook_ui.py  (+121 more)
A/: Library accuracy evaluation.html  extract_text.py  ground_truth.txt  sample.docx  sample_extracted.md  sample_extracted.txt
Audio Book Generator/: 1.5 Basics of Neural Network.pptx  docxparse.py  imageparse.py  main.py  pdfparse.py  pptparse.py  tomarkdown.py
Audiobook_Generation_with_RAG_System/: app.py  audiobook_generator.py  enhanced_extraction.py  main.py  rag_system.py  text_to_speech.py
Internship_Final/: README.md  docxparse.py  geminitest.py  imageparse.py  main.py  output (4).md  package.json  parser.py  pptparse.py  ragcall.py  ragutils.py  setup-check.py  start-dev.bat  start-fullstack.bat  start.bat  task1.ipynb  task4.ipynb  test.py  totts.py
LLM_model/: llm_file_rewriter.py  llm_rewritten_output.txt
(+164 files in other folders)
