[project]
name = "audiobook-generator"
version = "0.1.0"
description = "Audiobook generator backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "coqui-tts==0.23.0",
    "pdfplumber==0.11.0",
    "python-docx==1.1.2",
    "pytesseract==0.3.13",
    "pillow==10.4.0",
    "pydub==0.25.1",
    "soundfile==0.12.1",
    "librosa==0.10.1",
    "tqdm==4.66.5",
    "numpy==1.26.4",
    "scipy==1.11.4",
    "scikit-learn==1.5.2",
    "openai==1.40.0",
    "fastapi",
    "uvicorn[standard]",
    "pypdfium2",
    "python-dotenv",
    "aiofiles",
    "gtts",
    "pypdf",
    "langchain",
    "chromadb",
    "pytest",
    "boto3",
    "sentence-transformers",
    "pdf2image",
    "python-multipart", 
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]